[package]
name = "gridmapper_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"