[package]
name = "gridmapper_loader"
version = "0.1.1"
edition = "2021"
authors = ["Elric <elric.grisell@gmail.com>"]
repository = "https://github.com/onelric/gridmapper_loader"
license = "MIT OR Apache-2.0"
description = "A simple map editor loader for me."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"